--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Sofadi+One&display=swap');
 html {
-  font-family:Sofadi One;
+  font-family: "Protest Guerrilla", sans-serif;
   height: 100%;
   width: 100%;
 }
