--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Sofadi+One&display=swap');
 html {
   font-family: "Protest Guerrilla", sans-serif;
+  font-size:40px;
   height: 100%;
-  width: 100%;
+  width: 99%;
+  background-color:#E09B49;
+  color:#3B8C13;
+  border-style:double;
+  border-color:#CC2D2D;
+  border-radius: 10px;
+  border-width:8px;
 }
