--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Sofadi+One&display=swap');
 html {
-  font-family: "Protest Guerrilla", sans-serif;
-  font-size:40px;
   height: 100%;
   width: 99%;
   background-color:#E09B49;
@@ -10,4 +8,11 @@ html {
   border-color:#CC2D2D;
   border-radius: 10px;
   border-width:8px;
+}
+h1{
+  font-family: "Protest Guerrilla", sans-serif;
+  font-size:40px;
+}
+body{
+  font-family: "Protest Guerrilla", sans-serif;
 }
